--- a/blog/myblog/user/templates/user/article_add.html
+++ b/blog/myblog/user/templates/user/article_add.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block title %}发表文章{% endblock %}
 {% block lunbo %}{% endblock %}
+{% block left %}{% endblock %}
+{% block mid %}{% endblock %}
+{% block right %}{% endblock %}
+
 {% block content %}
 <script src="/static/tiny_mce/tiny_mce.js"></script>
-
-
 <h5 style="text-align: center ; color: red ;">{{msg}}</h5>
 <div class="container">
     <div class="row">
