--- a/blog/myblog/user/templates/user/changeinfo.html
+++ b/blog/myblog/user/templates/user/changeinfo.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}修改个人资料{% endblock %}
 {% block lunbo %}{% endblock %}
+{% block left %}{% endblock %}
+{% block mid %}{% endblock %}
+{% block right %}{% endblock %}
+
 {% block content %}
 <h5 style="text-align: center ; color: red ;">{{msg}}</h5>
 <div class="container">
