--- a/blog/myblog/user/templates/user/article_show.html
+++ b/blog/myblog/user/templates/user/article_show.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %}
 {% block title %}文章详情{% endblock %}
 {% block lunbo %}{% endblock %}
+{% block left %}{% endblock %}
+{% block mid %}{% endblock %}
+{% block right %}{% endblock %}
+
 {% block content %}
 <h5 style="text-align: center ; color: red ;">{{msg}}</h5>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-9 col-md-offset-2">
+            <div class="col-md-9 col-md-offset-2" >
                 <div>
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane active" id="mima">
@@ -15,13 +19,16 @@
                                     <div class="form-group">
                                         <div class="col-md-12">
                                             <label for="pwd1">文章详情</label>
+                                            <hr>
                                             <h2 style="text-align: center ">{{at.title}}</h2>
+
                                             <h5 style="text-align: right">
                                                 作者昵称：{{at.auth.nickname}}
                                                 发表时间：{{at.publishtime}}
                                                 修改时间：{{at.modifytime}}
                                                 点击量：{{at.count}}
                                             </h5>
+                                            <hr>
                                         </div>
                                     </div>
                                     <div class="form-group">
