--- a/blog/myblog/user/templates/user/login.html
+++ b/blog/myblog/user/templates/user/login.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}登录{% endblock %}
 {% block lunbo %}{% endblock %}
+{% block left %}{% endblock %}
+{% block mid %}{% endblock %}
+{% block right %}{% endblock %}
+
 {% block content %}
 <h5 style="text-align: center ; color: red ;">{{msg}}</h5>
 <div class="container">
@@ -16,8 +20,9 @@
                                     <form class="form-horizontal" action="{% url 'user:login' %}"
                                           method="post" enctype="multipart/form-data">
                                         {% csrf_token %}
-                                        <div class="form-group">
 
+                                        <div class="form-group">
+                                             <input type="hidden" name="next" value="{{next_url}}">
                                             <div class="col-md-10">
                                                 <label for="pwd1">用户登录名</label>
                                                 <input type="text" class="form-control"
@@ -36,7 +41,7 @@
                                             <div class="col-md-10">
                                                 <label for="pwd22">验证码</label>
                                                     <input type="text" name="code" id="pwd22" class="form-control" autocomplete="off">
-                                                    <img src="/get_code/" alt="" onclick="">
+                                                    <img src="/get_code/" alt="" onclick="get_code(this)">
                                             </div>
                                         {% else %}
                                         {% endif %}
@@ -68,5 +73,11 @@
         </div>
     </div>
 </div>
+<script>
+    function get_code(node) {
+        node.src='/get_code/?id='+Math.random()
+
+    }
+</script>
 
 {% endblock %}
