--- a/blog/myblog/user/templates/user/register.html
+++ b/blog/myblog/user/templates/user/register.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}修改个人资料{% endblock %}
 {% block lunbo %}{% endblock %}
+{% block left %}{% endblock %}
+{% block mid %}{% endblock %}
+{% block right %}{% endblock %}
+
 {% block content %}
 <h5 style="text-align: center ; color: red ;">{{msg}}</h5>
 <div class="container">
@@ -44,7 +48,7 @@
                                             <div class="col-md-10">
                                                 <label for="pwd22">验证码</label>
                                                 <input type="text" name="code" id="pwd22" class="form-control" autocomplete="off">
-                                                <img src="/get_code/" alt="" onclick="">
+                                                <img src="/get_code/" alt="" onclick="get_code(this)">
                                             </div>
                                         </div>
 
@@ -64,5 +68,16 @@
         </div>
     </div>
 </div>
+<script>
+    function get_code(codes){
+        codes.src='/get_code/?id='+Math.random()
+    }
+
+
+    function get_code1(){
+            img=document.getElementById('code')
+            img.src='/codes/?id='+ Math.random()
+        }
+</script>
 
 {% endblock %}
