--- a/blog/myblog/user/templates/user/showinfo.html
+++ b/blog/myblog/user/templates/user/showinfo.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
 {% block title %}展示个人资料{% endblock %}
 {% block lunbo %}{% endblock %}
+{% block left %}{% endblock %}
+{% block mid %}{% endblock %}
+{% block right %}{% endblock %}
+
 
 {% block content %}
 <h5 style="text-align: center ; color: red ;">{{msg}}</h5>
 <div class="container-fluid">
   <div class="row">
         <div class="col-md-3"></div>
-        <div class="col-md-5">
+        <div class="col-md-6">
             <ul class="list-group" style="text-align:center">
                 <li class="list-group-item" style="">
                     <img src="/{{request.session.loginuser.avatar}}" alt="用户头像" class="img-circle avatar" width="200px" height="200px">
