--- a/blog/myblog/user/templates/user/showlist.html
+++ b/blog/myblog/user/templates/user/showlist.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %}
 {% block title %}展示所有资料{% endblock %}
 {% block lunbo %}{% endblock %}
+{% block left %}{% endblock %}
+{% block mid %}{% endblock %}
+{% block right %}{% endblock %}
+
 
 {% block content %}
 <h5 style="text-align: center ; color: red ;">{{msg}}</h5>
 <div class="container-fluid">
   <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-8 col-md-offset-2">
           <table class="table table-bordered table-hover table-striped">
               <tr>
                   <td>用户头像</td>
