--- a/blog/myblog/user/templates/user/article_update.html
+++ b/blog/myblog/user/templates/user/article_update.html
@@ -39,7 +39,8 @@
 
                                         <div class="form-group">
                                             <div class="col-sm-3 col-sm-offset-10">
-                                                <button type="submit" class="btn btn-primary  zhucebtn2">修改文章
+                                                <button type="submit"  class="btn btn-primary zhucebtn2" onclick="return window.confirm('确认修改吗？？？')">
+                                                修改文章
                                                 </button>
                                             </div>
                                         </div>
@@ -63,6 +64,8 @@
         'width': 600,
         'height': 500,
     })
+
 </script>
+
 
 {% endblock %}
