--- a/blog/myblog/user/templates/user/changeinfo.html
+++ b/blog/myblog/user/templates/user/changeinfo.html
@@ -32,57 +32,62 @@
                                             <div class="col-md-10">
                                                 <label for="inputusername1">用户名称</label>
                                                 <input type="text" class="form-control"
-                                                       name="name" id="inputusername1" value="{{request.session.loginuser.name}}" disabled>
+                                                       name="name" id="inputusername1"
+                                                       value="{{request.session.loginuser.name}}" disabled>
                                             </div>
                                         </div>
-                                          <div class="form-group">
+                                        <div class="form-group">
 
                                             <div class="col-md-10">
                                                 <label for="inputusername2">用户昵称</label>
                                                 <input type="text" class="form-control"
-                                                       name="nickname" id="inputusername2" value="{{request.session.loginuser.nickname}}" >
+                                                       name="nickname" id="inputusername2"
+                                                       value="{{request.session.loginuser.nickname}}">
                                             </div>
                                         </div>
 
-                                         <div class="form-group">
+                                        <div class="form-group">
 
                                             <div class="col-md-10">
                                                 <label for="inputusername3">用户年龄</label>
                                                 <input type="text" class="form-control"
-                                                       name="age" id="inputusername3" value="{{request.session.loginuser.age}}" >
+                                                       name="age" id="inputusername3"
+                                                       value="{{request.session.loginuser.age}}">
                                             </div>
                                         </div>
 
-                                         <div class="form-group">
+                                        <div class="form-group">
 
                                             <div class="col-md-10">
                                                 <label for="inputusername5">用户邮箱</label>
                                                 <input type="text" class="form-control"
-                                                       name="email" id="inputusername5" value="{{request.session.loginuser.email}}" >
+                                                       name="email" id="inputusername5"
+                                                       value="{{request.session.loginuser.email}}">
                                             </div>
                                         </div>
-                                         <div class="form-group">
+                                        <div class="form-group">
 
                                             <div class="col-md-10">
                                                 <label for="inputusername6">用户电话</label>
                                                 <input type="text" class="form-control"
-                                                       name="phone" id="inputusername6" value="{{request.session.loginuser.phone}}" >
+                                                       name="phone" id="inputusername6"
+                                                       value="{{request.session.loginuser.phone}}">
                                             </div>
                                         </div>
-                                          <div class="form-group">
+                                        <div class="form-group">
 
                                             <div class="col-md-12">
                                                 <label for="inputusername4">用户性别</label>
                                                 {% if user.sex == '男'%}
                                                 <input type="radio" class=""
-                                                       name="sex" id="inputusername4" value="男" checked >男
+                                                       name="sex" id="inputusername4" value="男" checked>男
                                                 <input type="radio" class=""
-                                                       name="sex" id="inputusername4" value="女" >女
+                                                       name="sex" id="inputusername4" value="女">女
                                                 {% else %}
                                                 <input type="radio" class=""
-                                                       name="sex" id="inputusername4" value="男" >男
+                                                       name="sex" id="inputusername4" value="男">男
                                                 <input type="radio" class=""
-                                                       name="sex" id="inputusername4" value="女" checked >女
+                                                       name="sex" id="inputusername4" value="女" checked>女
                                                 {% endif %}
                                             </div>
                                         </div>
@@ -98,7 +103,7 @@
                             </div>
                         </div>
                         <div role="tabpanel" class="tab-pane " id="avatar">
-                              <div class="panel panel-default zhuce1">
+                            <div class="panel panel-default zhuce1">
 
                                 <div class="panel-body">
                                     <form class="form-horizontal" action="{% url 'user:changeavatar' %}"
@@ -107,7 +112,8 @@
                                         <div class="form-group">
 
                                             <div class="col-md-10">
-                                                <img src="/{{request.session.loginuser.avatar}}" alt="" style="width: 300px;height: 300px" id="img">
+                                                <img src="/{{request.session.loginuser.avatar}}" alt=""
+                                                     style="width: 300px;height: 300px" id="img">
                                             </div>
                                         </div>
                                         <div class="form-group ">
@@ -130,7 +136,6 @@
                         </div>
                         <div role="tabpanel" class="tab-pane " id="mima">
                             <div class="panel panel-default zhuce1">
-
                                 <div class="panel-body">
                                     <form class="form-horizontal" action="{% url 'user:changepwd' %}"
                                           method="post">
@@ -140,24 +145,24 @@
                                             <div class="col-md-10">
                                                 <label for="pwd1">旧密码</label>
                                                 <input type="password" class="form-control"
-                                                       name="oldpwd" id="pwd1" value="" >
+                                                       name="oldpwd" id="pwd1" value="">
                                             </div>
                                         </div>
-                                          <div class="form-group">
+                                        <div class="form-group">
 
                                             <div class="col-md-10">
                                                 <label for="pwd2">新密码</label>
                                                 <input type="password" class="form-control"
-                                                       name="newpwd" id="pwd2" >
+                                                       name="newpwd" id="pwd2">
                                             </div>
                                         </div>
 
-                                         <div class="form-group">
+                                        <div class="form-group">
 
                                             <div class="col-md-10">
                                                 <label for="pwd3">确认密码</label>
                                                 <input type="password" class="form-control"
-                                                       name="confirm" id="pwd3" >
+                                                       name="confirm" id="pwd3">
                                             </div>
                                         </div>
 
